finalize 方法。